<!--Scroll View to allow scrolling of long view-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizfinal.MainActivity">

    <!--Overarching Linear layout holding all relative and other views-->
    <LinearLayout
        android:id="@+id/primaryLinearLayout"
        style="@style/MyOverallTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Title of the Program-->
        <TextView
            android:id="@+id/programTitle"
            style="@style/TitleTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeHeader" />

        <!--QUESTION 1-->
        <TextView
            android:id="@+id/question1"
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1Text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/checkboxColumns"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/q1a"
                    style="@style/CheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1aText" />

                <CheckBox
                    android:id="@+id/q1b"
                    style="@style/CheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1bText" />
            </LinearLayout>

            <LinearLayout
                style="@style/checkboxColumns"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/q1c"
                    style="@style/CheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1cText" />

                <CheckBox
                    android:id="@+id/q1d"
                    style="@style/CheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1dText" />
            </LinearLayout>
        </LinearLayout>


        <!--QUESTION 2-->
        <TextView
            android:id="@+id/question2"
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2Text" />

        <EditText
            android:id="@+id/q2a"
            style="@style/editTextstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--QUESTION 3-->
        <TextView
            android:id="@+id/question3"
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3Text" />

        <RadioGroup
            android:id="@+id/q3group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q3a"
                style="@style/radioStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3a" />

            <RadioButton
                android:id="@+id/q3b"
                style="@style/radioStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3b" />

            <RadioButton
                android:id="@+id/q3c"
                style="@style/radioStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3c" />

            <RadioButton
                android:id="@+id/q3d"
                style="@style/radioStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3d" />
        </RadioGroup>

        <!--Submit Answers Button-->
        <Button
            android:id="@+id/submitAnswersButton"
            style="@style/myButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitAnswers" />

    </LinearLayout>
</ScrollView>
